<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="geoticket.com.geoticket.SelectionTarifActivity"
    tools:layout_editor_absoluteY="81dp"
    tools:layout_editor_absoluteX="0dp">

    <Button
        android:id="@+id/tarif1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="editTicket"
        android:text="@string/tarif_1"
        android:layout_marginStart="63dp"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toBottomOf="@+id/tarif2"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tarif2"/>

    <Button
        android:id="@+id/tarif2"
        android:onClick="editTicket"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tarif_2"
        android:layout_marginEnd="87dp"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="49dp"
        app:layout_constraintTop_toTopOf="parent"/>

    <Button
        android:id="@+id/tarif3"
        android:onClick="editTicket"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tarif_3"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="@+id/tarif1"
        android:layout_marginTop="39dp"
        app:layout_constraintTop_toBottomOf="@+id/tarif1"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/tarif1"/>

    <Button
        android:id="@+id/tarif4"
        android:onClick="editTicket"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tarif_4"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="@+id/tarif2"
        android:layout_marginTop="39dp"
        app:layout_constraintTop_toBottomOf="@+id/tarif2"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/tarif2"/>

    <Button
        android:id="@+id/tarif5"
        android:onClick="editTicket"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tarif_5"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="@+id/tarif3"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@+id/tarif3"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/tarif3"/>

    <Button
        android:id="@+id/tarif6"
        android:onClick="editTicket"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tarif_6"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="@+id/tarif4"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@+id/tarif4"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/tarif4"/>

    <Button
        android:id="@+id/tarif7"
        android:onClick="editTicket"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tarif_7"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="@+id/tarif5"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@+id/tarif5"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/tarif5"/>

    <Button
        android:id="@+id/tarif8"
        android:onClick="editTicket"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tarif_8"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="@+id/tarif6"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@+id/tarif6"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/tarif6"/>

    <Button
        android:id="@+id/tarif9"
        android:onClick="editTicket"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tarif_9"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="@+id/tarif7"
        android:layout_marginTop="46dp"
        app:layout_constraintTop_toBottomOf="@+id/tarif7"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/tarif7"/>

    <Button
        android:id="@+id/tarif10"
        android:onClick="editTicket"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tarif_10"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="@+id/tarif8"
        android:layout_marginTop="46dp"
        app:layout_constraintTop_toBottomOf="@+id/tarif8"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/tarif8"/>
    <ListView
        android:visibility="invisible"
        android:id="@android:id/list"
        android:layout_width="47dp"
        android:layout_height="wrap_content"
        android:text="@string/hello"
        android:layout_marginStart="16dp"
        tools:layout_constraintTop_creator="1"
        android:layout_marginTop="42dp"
        app:layout_constraintTop_toBottomOf="@+id/tarif9"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <Button
        android:id="@+id/button3"
        android:layout_width="203dp"
        android:layout_height="50dp"
        android:layout_marginBottom="85dp"
        android:background="@android:color/holo_blue_dark"
        android:onClick="fermerVente"
        android:text="@string/fin_des_ventes"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1" />
</android.support.constraint.ConstraintLayout>
