<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="fill_vertical" >

    <Button
        android:id="@+id/button4"
        android:layout_width="182dp"
        android:layout_height="61dp"
        android:onClick="vendre"
        android:text="TARIF"
        tools:text="TARIF"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        ads:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginEnd="77dp"
        ads:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="77dp"
        android:layout_marginBottom="1dp" />

    <RelativeLayout
        android:id="@+id/printer_rl"
        android:layout_width="0dp"
        android:layout_height="334dp"
        android:layout_marginEnd="36dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="4dp"
        android:padding="2dp"
        ads:layout_constraintLeft_toLeftOf="parent"
        ads:layout_constraintRight_toRightOf="parent"
        ads:layout_constraintTop_toTopOf="parent"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1"
        ads:layout_constraintHorizontal_bias="0.506">

        <TextView
            android:id="@+id/txtPrinerStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginBottom="5dp"
            android:ellipsize="end"
            android:singleLine="true"
            android:text="@string/no_printer_connected" />

        <Button
            android:id="@+id/btn_connect_bluetooth_device"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/txtPrinerStatus"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/connect_bluetooth_device_btn" />

        <Button
            android:id="@+id/btn_print"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/btn_connect_bluetooth_device"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/print_btn" />
        android:text="@string/bt_inquiry_btn" />

        <ImageView
            android:id="@+id/printer_imgPOSPrinter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/contentdesctiption"
            android:scaleType="fitXY"
            android:src="@drawable/pos_printer_offliine" />
    </RelativeLayout>


</android.support.constraint.ConstraintLayout>